# ds_code_template_and_guides

./: DS_Template.ipynb  README.md  command_line.md  useful_command_line.md  useful_functions.ipynb
ML Tools/: cross_validation.ipynb
a_b_testing/: An end to end example of setting up experiment (study notes).html  sample_size_proportion_outcome.py
kaggle_project/bank_churn/: kaggle_with_catboosting_including_cross_validation.ipynb  model_v1.ipynb  model_v2_with_catboost.ipynb  pyproject.toml  submission.csv
kaggle_project/customer_personality/: README.md  pyproject.toml
kaggle_project/customer_personality/customer_personality/: model_v1.ipynb
