[tool.poetry]
name = "bank-churn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
pip = "^23.3.2"
ipykernel = "^6.28.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.1"
xgboost = "^2.0.3"
graphviz = "^0.20.1"
hpsklearn = {git = "https://github.com/hyperopt/hyperopt-sklearn"}
hyperopt = {git = "https://github.com/hyperopt/hyperopt"}
catboost = "^1.2.3"
polars = "^0.20.13"
ipywidgets = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
