[tool.poetry]
name = "customer_personality"
version = "0.1.0"
description = ""
authors = ["zoe chen <zoechensj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.3"
numpy = "^1.26.4"
pandas = "^2.2.1"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
regex = "^2023.12.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
